# stellar-8004

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP-10-10.md  TECHNICAL.md  audit.md  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml
contracts/identity-registry/: Cargo.toml
contracts/identity-registry/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/identity-registry/test_snapshots/test/: test_extend_ttl_bumps_oz_owner_and_balance.1.json  test_extend_ttl_extends_metadata_entries.1.json  test_find_owner_returns_owner_for_registered_agent.1.json  test_get_metadata_for_agent_wallet_returns_strkey_bytes.1.json  test_is_authorized_or_owner.1.json  test_name_and_symbol.1.json  test_non_owner_cannot_set_uri.1.json  test_non_owner_cannot_set_wallet.1.json  test_non_owner_cannot_unset_wallet.1.json  test_ownership_transfer.1.json  test_propose_upgrade_rejects_duplicate.1.json  test_register.1.json  test_register_full.1.json  test_register_full_rejects_oversized_metadata.1.json  test_register_initializes_agent_wallet_to_caller.1.json  test_register_with_uri.1.json  test_sequential_ids.1.json  test_set_agent_uri.1.json  test_set_agent_wallet.1.json  test_set_metadata.1.json  test_set_metadata_accepts_max_size_payload.1.json  test_set_metadata_rejects_excess_keys.1.json  test_set_metadata_rejects_reserved_agent_wallet_key.1.json  test_set_uri_on_missing_agent_returns_error_not_panic.1.json  test_set_wallet_on_missing_agent_returns_error_not_panic.1.json  test_timelocked_upgrade.1.json  test_token_uri_returns_agent_uri.1.json  test_transfer_clears_metadata.1.json  test_transfer_clears_wallet.1.json  test_upgrade_requires_auth.1.json
contracts/reputation-registry/: Cargo.toml
contracts/reputation-registry/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  test_integration.rs  types.rs
contracts/reputation-registry/test_snapshots/test/: test_aggregate_overflow_is_rejected.1.json  test_aggregate_ttl_survives_long_idle_periods_via_reads.1.json  test_anyone_can_append_response.1.json  test_append_response.1.json  test_append_response_on_missing_agent_returns_error_not_panic.1.json  test_approved_operator_rejected_from_self_feedback.1.json  test_bound_agent_wallet_rejected_from_self_feedback.1.json  test_client_tracking.1.json  test_double_revoke_fails.1.json  test_feedback_ttl_survives_long_idle_periods_via_reads.1.json  test_get_summary_aggregate.1.json  test_get_summary_caps_explicit_client_list.1.json  test_get_summary_returns_average.1.json  test_get_summary_revoked_excluded.1.json  test_get_summary_skips_unnormalizable_legacy_entry.1.json  test_get_summary_wad_normalization_picks_mode_decimals.1.json  test_give_feedback.1.json  test_give_feedback_on_missing_agent_returns_error_not_panic.1.json  test_non_owner_cannot_append_response.1.json  test_non_submitter_cannot_revoke.1.json  test_revoke_feedback.1.json  test_revoke_updates_aggregate.1.json  test_self_feedback_allowed_per_jan_2026_spec.1.json  test_self_feedback_rejected.1.json  test_timelocked_upgrade.1.json  (+2 more)
(+327 files in other folders)
