[workspace]
resolver = "2"
members = [
    "contracts/*",
    "packages/*",
]

[workspace.dependencies]
soroban-sdk = "25"
stellar-tokens = "0.6"
stellar-access = "0.6"
stellar-macros = "0.6"
stellar-contract-utils = "0.6"
erc8004-common = { path = "packages/erc8004-common" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
