[workspace]
resolver = "2"
members = [
    "contracts/*",
    "packages/*",
]

[workspace.dependencies]
soroban-sdk = "25"
stellar-tokens = { git = "https://github.com/OpenZeppelin/stellar-contracts", rev = "9dd85c30" }
stellar-access = { git = "https://github.com/OpenZeppelin/stellar-contracts", rev = "9dd85c30" }
stellar-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts", rev = "9dd85c30" }
stellar-contract-utils = { git = "https://github.com/OpenZeppelin/stellar-contracts", rev = "9dd85c30" }
erc8004-common = { path = "packages/erc8004-common" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
